Changes with APR a9
  *) Add a step at configure time to create a file at the top-level,
     apr.exports, which lists every function exported by APR.  The
     file is generated by a script in helpers, that reads each header
     file.
     [Ryan Bloom]

  *) Lock config changes: Detect SysV sem capability by the presence of
     sempaphore functions, not by the presence of union semun.  New
     config variable apr_lock_method can override autodetection of the 
     apr_lock implementation method.  For now, hints.m4 uses it to select 
     SysV semaphores for OS/390.  [Jeff Trawick]
     
  *) Get APR_OFF_T_FMT defined properly on Solaris Sparc.
     [Jeff Trawick]

Changes with APR a8
  *) Change the name of the sa_len field in apr_sockaddr_t to salen.
     Some platforms have a macro named sa_len.
     [Tony Finch]

  *) apr_set_port(), apr_get_port(), apr_set_ipaddr(), and apr_get_ipaddr()
     now take apr_sockaddr_t as a parameter instead of apr_socket_t +
     apr_interface_e.  This will allow the same routines to be used with
     datagram APIs to be added later.  Note that code which calls 
     apr_set_ipaddr() should probably be changed to call apr_getaddrinfo()
     for protocol independence.  [Jeff Trawick]

  *) apr_create_tcp_socket() has been removed.  Use apr_create_socket()
     instead.  [Jeff Trawick]

  *) Source was moved from the apache-2.0 repository.  For all CHANGES
     prior to this time, please see the apache-2.0 repository