@@ -139,6 +139,8 @@
 #define APR_USE_PROC_PTHREAD_SERIALIZE    0 
 #define APR_USE_PTHREAD_SERIALIZE         0 
 
+#define APR_PROCESS_LOCK_IS_GLOBAL        0
+
 #define NO_USE_SIGACTION
 
 #if APR_HAVE_SYS_TYPES_H
